display dâte profile

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 ﻿<my-app-header></my-app-header>
-
+<my-app-background></my-app-background>
 <alert></alert>
 <router-outlet></router-outlet>
 <tabs><tab></tab></tabs>
