--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="w3-display-container w3-content w3-section backgroundcolor" style="max-width:1980px">
-    <img src="../images/cover1.png" alt="background-image" width="100%" height="729">
+    <img src="../images/cover2.png" alt="background-image" width="100%" height="729">
     <div class="w3-display-middle w3-margin-top w3-center">
       <form class="form-inline">
         <div class="row">
-            <input type="text" class="w3-round-jumbo form-control" placeholder="What are you looking for?" style="width:550px; height:50px;">
-            <button type="submit" class="w3-round-jumbo btn" style="margin-top:5px; width:100px; height:50px;color:white; background-color:#222930">Search</button>
+            <input type="text" class="w3-round-jumbo form-control" placeholder="What are you looking for?" style="margin-top:25%;width:550px; height:50px;">
+            <button type="submit" class="w3-round-jumbo btn" style="margin-top:25%;margin-left:5px; width:100px; height:50px;color::#222930;backgroud-color:white;">Search</button>
         </div>
       </form>
     </div>
