--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -22,8 +22,11 @@
   <div class="row">
     <div class="col-md-8">
     </div>
-    <div class="col-md-4">
-      <button type="submit" name="swapme" class="swapme-button btn btn-success">SWAP ME!</button>
+    <div class="md-dialog-container"id="Mydialogcontainer">
+      <button  md-button (click)="openDialog()">SWAP ME!</button>
+
+
+
     </div>
   </div>
   <div class="container">
@@ -174,7 +177,9 @@
           </div>
         </div>
       </tab>
-      <tab tabTitle="Review">Tab 3 Content</tab>
+      <tab tabTitle="Review">
+        <input type="text"""
+      </tab>
     </tabs>
   </div>
 </div>
