--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -22,8 +22,8 @@
   <div class="row">
     <div class="col-md-8">
     </div>
-    <div class="col-md-4">
-      <button type="submit" name="swapme" class="swapme-button btn btn-success">SWAP ME!</button>
+    <div class="col-md-4 md-dialog-container " id="Mydialogcontainer">
+      <button md-button (click)="openDialog()" type="submit" name="swapme" class="swapme-button btn btn-success">SWAP ME!</button>
     </div>
   </div>
   <div class="container">
