Decorate Profile and Request Interface

--- a/client/src/app/profile/request.component.html
+++ b/client/src/app/profile/request.component.html
@@ -1,12 +1,23 @@
-<h1>REQUEST SWAP</h1>
 
-<div><img src="../images/handshake.png" alt="Swap icon" ></div>
-<md-dialog-content>
-<p><label>From: </label></p>
-<p><label>To: </label></p>
-<input type="text" class="form-control"style="height:120px;">
-</md-dialog-content>
-<div class="modal-footer">
-  <button type="button" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-ok"></span></button>
-<button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon-remove"></span></button>
+
+<div class="containerform request-width">
+
+  <div class="img-request">
+    <h1>REQUEST SWAP</h1>
+  <img src="../images/request-handshake.png" alt="Swap icon" style="max-width:100px; max-height:100px;" ></div>
+  <md-dialog-content>
+    <div class="row">
+      <div class="col-6">
+        <p><label>From: </label></p>
+      </div>
+      <div class="col-6">
+        <p><label>To: </label></p>
+      </div>
+    </div>
+  <input type="text" class="form-control"style="height:120px;">
+  </md-dialog-content>
+  <div style="text-align:center;">
+    <button type="button" class="btn btn-success btn-lg"><span class="glyphicon glyphicon-ok"></span></button>
+  <button type="button" class="btn btn-danger btn-lg .cancelbtn"><span class="glyphicon glyphicon-remove"></span></button>
+  </div>
 </div>
