--- a/client/src/app/_layouts/header.component.html
+++ b/client/src/app/_layouts/header.component.html
@@ -1,26 +1,37 @@
 <header>
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+      <div class="navbar-header">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
-
             <a class="navbar-brand" href="/">
                 <img src="../../images/VinaSwapProjectLogo.png" height="80px" />
             </a>
-
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item" *ngIf="!isLogin">
-                        <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
-                    </li>
-                    <li class="nav-item" *ngIf="!isLogin">
-                        <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
-                    </li>
-                    <li class="nav-item" *ngIf="isLogin">
-                        <a class="nav-link" routerLink="/logout" routerLinkActive="active">Logout</a>
-                    </li>
-                </ul>
-            </div>
+      </div>
+          <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="nav navbar-nav navbar-right">
+                  <li class="nav-item" *ngIf="!isLogin">
+                      <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
+                  </li>
+                  <li class="nav-item" *ngIf="!isLogin">
+                      <a class="nav-link" routerLink="/register" routerLinkActive="active">Register</a>
+                  </li>
+                  <li class="nav-item" *ngIf="isLogin">
+                      <a class="nav-link" routerLink="/logout" routerLinkActive="active">Logout</a>
+                  </li>
+              </ul>
+          </div>
     </nav>
+    <!-- <nav class="navbar navbar-default">
+      <div class="navbar-header">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand" href="/">
+                <img class="img-fluid" src="../../images/VinaSwapProjectLogo.png"/>
+            </a>
+      </div>
+    </nav> -->
 </header>
