--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -202,47 +202,52 @@ span.psw {
   margin-left: 25%;
   background-color: #e9dd91;
 }
-.swapme-button{
-  background-color: #6cbf6e;
-  margin-top: 10px;
-  font-size: 25px;
+.div-swapme-button{
+  text-align: right;
 }
-.profile-panel-header{
+.div-swapme-button .swapme-button{
+  background-color: #6cbf6e;
+  margin: 9%;
+  font-size: 30px;
+  border-radius: 5px;
+  width: 100%;
+  height: 80px;
+  color: white;
+  font-family:sans-serif;
+  float: right;
+}
+/*.profile-panel-header{
   border: solid;
   border-width: 1px;
   border-radius: 5px;
   border-color: #DDD;
   background-color: white;
   margin-top: 3%;
-}
+}*/
 .p-name-profile{
   font-size: 20px;
 }
 .web-background-color{
   background-color: #c0efe6;
 }
-/*.nav-tabs { border-bottom: 1px solid #DDD; }*/
-    /*.nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover { border-width: 0; }
-    .nav-tabs > li > a { border: none; color: #666; }
-        .nav-tabs > li.active > a, .nav-tabs > li > a:hover { border: none; color: #4285F4 !important; background: transparent; }
-        .nav-tabs > li > a::after { content: ""; background: #4285F4; position: absolute; width: 100%; left: 0px; bottom: -1px; transition: all 250ms ease 0s; transform: scale(0); }*/
-.tab-heading{
-  display: inline;
-   border: solid;
-   border-width: 1px 1px 0 1px;
-   border-radius: 5px;
-   background-color: white;
-   padding: 10px;
-   border-color: #DDD;
-}
 .tab-content{
   border: solid;
   border-width: 0 1px 1px 1px;
-  border-radius: 5px;
   border-color: #DDD;
   background-color: white;
   padding: 10px;
 }
+.request-width{
+  width: 600px;
+}
+.request-width .img-request{
+  padding: 10px;
+  text-align: center;
+}
+.background-color{
+  background-color: #c0efe6;
+}
+
 @-webkit-keyframes animatezoom {
     from {-webkit-transform: scale(0)}
     to {-webkit-transform: scale(1)}
@@ -264,3 +269,8 @@ span.psw {
        width: 100%;
     }
 }
+@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    .request-width {
+      width: 300px;
+    }
+ }
