Request Swap & Create Profile

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -13,5 +13,10 @@
 
             <a [routerLink]="['/register']" class="btn btn-link">Register</a>
         </div>
+        <div class="form-group" id="Mydialogcontaine">
+
+            <button md-button (click)="openDialog()" type="submit" name="swapme" class="swapme-button">open</button>
+
+        </div>
     </form>
 </div>
