--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -216,14 +216,6 @@ span.psw {
   font-family:sans-serif;
   float: right;
 }
-/*.profile-panel-header{
-  border: solid;
-  border-width: 1px;
-  border-radius: 5px;
-  border-color: #DDD;
-  background-color: white;
-  margin-top: 3%;
-}*/
 .p-name-profile{
   font-size: 20px;
 }
@@ -237,15 +229,40 @@ span.psw {
   background-color: white;
   padding: 10px;
 }
-.request-width{
+.modal-width{
   width: 600px;
 }
-.request-width .img-request{
+.modal-button{
+  text-align: center;
+  margin-top: 10px;
+}
+.modal-width .img-request{
   padding: 10px;
   text-align: center;
 }
 .background-color{
   background-color: #c0efe6;
+}
+.btn-group .dropdown{
+  background-color: lightgrey;
+}
+.btn-group .beforedropdown{
+  border: solid;
+  border-width: 1px 0px 1px 1px;
+  border-color: #DDD;
+  font-size: 12px;
+  width: 55px;
+  height: 30px;
+}
+.form-group .marginbtn{
+  margin-left: 7px;
+}
+.dropdownbtn{
+  width: 30px;
+  height: 30px;
+}
+.input-text-margin{
+  margin-top: 10px;
 }
 
 @-webkit-keyframes animatezoom {
@@ -269,8 +286,3 @@ span.psw {
        width: 100%;
     }
 }
-@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
-    .request-width {
-      width: 300px;
-    }
- }
