--- a/client/src/app/profile/request.component.html
+++ b/client/src/app/profile/request.component.html
@@ -1,6 +1,7 @@
 
 
-<div class="containerform modal-width">
+<div class="containerform request-width">
+
   <div class="img-request">
     <h1>REQUEST SWAP</h1>
   <img src="../images/request-handshake.png" alt="Swap icon" style="max-width:100px; max-height:100px;" ></div>
