--- a/client/src/app/_layouts/footer.component.html
+++ b/client/src/app/_layouts/footer.component.html
@@ -8,10 +8,13 @@
             <a class="nav-link" href="#">Swap It</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" routerLink="/aboutus" routerLinkActive="active">About Us</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">FAQs</a>
+        <li class="nav-item ">
+            <a class="nav-link" routerLink="/contactus" routerLinkActive="active">Contact Us</a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link" routerLink="/faqs" routerLinkActive="active">FAQs</a>
         </li>
     </ul>
 </footer>
