--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -12,16 +12,18 @@
       </div>
       <div class="col-md-6 col-7 flex-container-column">
         <div class="flex-item-profile">
-          <p class="p-name-profile">{{ profile.nickname }}</p>
+          <!-- <p class="p-name-profile">{{ profile.nickname }}</p> -->
+          <p class="p-name-profile">{{ profile.name }}</p>
         </div>
         <div class="flex-item-profile">
           <p>description</p>
         </div>
       </div>
       <div class="col-md-3 col-5">
-        <div class="circle-rating">
+        <!-- rating -->
+        <!-- <div class="circle-rating">
           <p></p>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="row">
@@ -46,7 +48,7 @@
             <!-- display skill have -->
             <div [hidden]="displayInformation">
               <ul>
-                <li>{{skills.have}}</li>
+                <li *ngFor="let have of skillHave">{{have.name}}</li>
               </ul>
             </div>
             <!-- edit skill have  -->
@@ -62,7 +64,7 @@
           <!-- display skill need -->
           <div [hidden]="displayInformation">
             <ul>
-              <li>{{skills.want}}</li>
+              <li *ngFor="let want of skillWant">{{want.name}}</li>
             </ul>
           </div>
           <!-- edit skill need-->
@@ -170,7 +172,7 @@
             </div>
             <div class="col-md-9">
               <div class="flex-item-detail-tab">
-                {{email}}
+                {{currentEmail}}
               </div>
             </div>
           </div>
@@ -276,9 +278,9 @@
               </div>
             </div>
             <div class="col-2" style="width:180px; height:180px;">
-              <div class="circle-rating-review">
+              <!-- <div class="circle-rating-review">
                 point
-              </div>
+              </div> -->
             </div>
           </div>
         </tab>
