--- a/client/src/app/search/search.component.html
+++ b/client/src/app/search/search.component.html
@@ -50,7 +50,7 @@
                 <div style="height:140px; width:300px; margin:10px; ">
                   <div class="flex-container-column">
                     <div style="height:100px;width:100%; ">
-                      <p *ngFor="let resultUserProfile of resultUserProfiles"><a href="#">{{resultUserProfile.name}}</a></p>
+                      <p *ngFor="let resultUserProfile of resultUserProfiles"><a *ngFor="let doc of resultUser" [routerLink]="['/profile']" [queryParams]="{email: doc.email}">{{resultUserProfile.name}}</a></p>
                     </div>
                     <div class="flex-container-row" style="height:40px;width:100%; ">
                       <div style="height:100%;width:100%;">
