--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -6,8 +6,8 @@
   <div class="container">
     <div class="row panel panel-default">
       <div class="col-md-3">
-        <a href="#" class="thumbnail">
-          <img src="../../images/user1.jpg" class="img-fluid" alt="profile-picture">
+        <a href="#" class=" thumbnail" style="margin-top: 10px;">
+          <img src="../../images/user.jpg" class="img-fluid" alt="profile-picture">
         </a>
       </div>
       <div class="col-md-6 col-7 flex-container-column">
@@ -256,7 +256,7 @@
               <div class="user-review">
                 <div class="flex-review-item">
                   <div class="img-review">
-                    <img src="../../images/user2.jpg" class="img-fluid">
+                    <img src="../../images/user.jpg" class="img-fluid">
                   </div>
                   <div class="review-information">
                     <div class="row" style="margin:10px;">
