--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -18,6 +18,7 @@
         </form>
       </div>
   </div>
+  <button [routerLink]="['/verification']" class="btn btn-link">test</button>
   <!-- <div class="container-main" > -->
   <div class="row">
     <div class="col-md-10 col-md-offset-1 col-xs-offset-1" style=" background-color:#f7fade;">
