--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -23,7 +23,6 @@ footer {
    top: 700px;
    left: 80px;
 
-
 }
 .text2{
   position: absolute;
@@ -47,7 +46,61 @@ footer {
 .contentaboutus{
   text-align: center;
 }
+#noti_Container {
+        position:relative;
+    }
+#noti_Button {
+        line-height:22px;
+        border-radius:50%;
+        -moz-border-radius:50%;
+        -webkit-border-radius:50%;
+        margin:13px 10px 0 10px;
+        cursor:pointer;
+    }
 
+
+    #noti_Counter {
+        display:block;
+        position:absolute;
+        background:#E1141E;
+        color:#FFF;
+        font-size:12px;
+        font-weight:normal;
+        padding:1px 3px;
+        margin:-8px 0 0 25px;
+        border-radius:2px;
+        -moz-border-radius:2px;
+        -webkit-border-radius:2px;
+        z-index:1;
+    }
+
+
+   #notifications {
+       display:none;
+       width:430px;
+       position:absolute;
+       top:30px;
+       left:0;
+       background:#FFF;
+       border:solid 1px rgba(100, 100, 100, .20);
+       -webkit-box-shadow:0 3px 8px rgba(0, 0, 0, .20);
+       z-index: 1;
+   }
+
+   #notifications:before {
+       content: '';
+       display:block;
+       width:0;
+       height:0;
+       color:transparent;
+       border:10px solid #CCC;
+       border-color:transparent transparent #FFF;
+       margin-top:-20px;
+       margin-left:10px;
+   }
+   div.scroll {
+    overflow:auto;
+}
 #panel, #flip {
     padding: 5px;
     text-align: left;
